// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paradox.PersonalityArchetypeHeading fallbacks renders component in third person 1`] = `
<div
  className="container"
>
  <div
    className="details"
  >
    <div>
      <img
        alt="Cohort"
        className={null}
        src="https://cdn.traitify.com/icons/big-five/paradox-blue/cohort.png"
      />
      <div
        className="heading"
        dangerouslySetInnerHTML={
          {
            "__html": "personality_heading_third_person - {"deck_name":"Big Five","personality":"<span>Cohort</span>"}",
          }
        }
      />
    </div>
    <div
      className="p"
    >
      Cohorts are up for trying novel tasks and considering new ideas. Steady and content with focusing attention on multiple projects at once, this candidate may worry about how they are being perceived by others and want to manage their reputation.
    </div>
  </div>
  <div
    className="meaning"
  >
    <video
      controls={true}
      crossOrigin="anonymous"
      playsInline={true}
      poster="https://cdn.traitify.com/content/paradox-archetype-videos/Cohort_thumb.jpg"
    >
      <source
        src="https://cdn.traitify.com/content/paradox-archetype-videos/CohortV2.mp4"
        type="video/mp4"
      />
      <track
        kind="captions"
        src="https://cdn.traitify.com/content/paradox-archetype-videos/Cohort.vtt"
      />
    </video>
  </div>
</div>
`;

exports[`Paradox.PersonalityArchetypeHeading fallbacks renders component without Paradox data 1`] = `
<div
  className="container"
>
  <div
    className="details"
  >
    <div>
      <img
        alt="Cohort"
        className={null}
        src="https://cdn.traitify.com/icons/big-five/paradox-blue/cohort.png"
      />
      <div
        className="heading"
        dangerouslySetInnerHTML={
          {
            "__html": "personality_heading - {"deck_name":"Big Five","personality":"<span>Cohort</span>"}",
          }
        }
      />
    </div>
    <div
      className="p"
    >
      You are up for trying novel tasks and considering new ideas. Steady and content with focusing attention on multiple projects at once, you may worry about how you are being perceived by others and want to manage your reputation.
    </div>
  </div>
  <div
    className="meaning"
  >
    <video
      controls={true}
      crossOrigin="anonymous"
      playsInline={true}
      poster="https://cdn.traitify.com/content/paradox-archetype-videos/Cohort_thumb.jpg"
    >
      <source
        src="https://cdn.traitify.com/content/paradox-archetype-videos/CohortV2.mp4"
        type="video/mp4"
      />
      <track
        kind="captions"
        src="https://cdn.traitify.com/content/paradox-archetype-videos/Cohort.vtt"
      />
    </video>
  </div>
</div>
`;

exports[`Paradox.PersonalityArchetypeHeading fallbacks renders component without badge 1`] = `
<div
  className="container"
>
  <div
    className="details"
  >
    <div>
      <div
        className="heading"
        dangerouslySetInnerHTML={
          {
            "__html": "personality_heading - {"deck_name":"Big Five","personality":"<span>Cohort</span>"}",
          }
        }
      />
    </div>
    <div
      className="p"
    >
      You are up for trying novel tasks and considering new ideas. Steady and content with focusing attention on multiple projects at once, you may worry about how you are being perceived by others and want to manage your reputation.
    </div>
  </div>
  <div
    className="meaning"
  >
    <video
      controls={true}
      crossOrigin="anonymous"
      playsInline={true}
      poster="https://cdn.traitify.com/content/archetype-videos/Cohort.jpg"
    >
      <source
        src="https://cdn.traitify.com/content/archetype-videos/Cohort.mp4"
        type="video/mp4"
      />
      <track
        kind="captions"
        src="https://cdn.traitify.com/content/archetype-videos/Cohort.vtt"
      />
    </video>
  </div>
</div>
`;

exports[`Paradox.PersonalityArchetypeHeading fallbacks renders component without video 1`] = `
<div
  className="container"
>
  <div
    className="details"
  >
    <div>
      <img
        alt="Cohort"
        className="fallback"
        src="https://cdn.traitify.com/icons/big-five/white/cohort.png"
      />
      <div
        className="heading"
        dangerouslySetInnerHTML={
          {
            "__html": "personality_heading - {"deck_name":"Big Five","personality":"<span>Cohort</span>"}",
          }
        }
      />
    </div>
    <div
      className="p"
    >
      You are up for trying novel tasks and considering new ideas. Steady and content with focusing attention on multiple projects at once, you may worry about how you are being perceived by others and want to manage your reputation.
    </div>
  </div>
  <div
    className="meaning"
  >
    <p
      dangerouslySetInnerHTML={
        {
          "__html": "archetype_description_html",
        }
      }
    />
  </div>
</div>
`;

exports[`Paradox.PersonalityArchetypeHeading renders component 1`] = `
<div
  className="container"
>
  <div
    className="details"
  >
    <div>
      <img
        alt="Cohort"
        className={null}
        src="https://cdn.traitify.com/icons/big-five/paradox-blue/cohort.png"
      />
      <div
        className="heading"
        dangerouslySetInnerHTML={
          {
            "__html": "personality_heading - {"deck_name":"Big Five","personality":"<span>Cohort</span>"}",
          }
        }
      />
    </div>
    <div
      className="p"
    >
      You are up for trying novel tasks and considering new ideas. Steady and content with focusing attention on multiple projects at once, you may worry about how you are being perceived by others and want to manage your reputation.
    </div>
  </div>
  <div
    className="meaning"
  >
    <video
      controls={true}
      crossOrigin="anonymous"
      playsInline={true}
      poster="https://cdn.traitify.com/content/paradox-archetype-videos/Cohort_thumb.jpg"
    >
      <source
        src="https://cdn.traitify.com/content/paradox-archetype-videos/CohortV2.mp4"
        type="video/mp4"
      />
      <track
        kind="captions"
        src="https://cdn.traitify.com/content/paradox-archetype-videos/Cohort.vtt"
      />
    </video>
  </div>
</div>
`;

exports[`Paradox.PersonalityArchetypeHeading renders component with headers 1`] = `
<div
  className="container"
>
  <div
    className="details"
  >
    <div>
      <img
        alt="Cohort"
        className={null}
        src="https://cdn.traitify.com/icons/big-five/paradox-blue/cohort.png"
      />
      <div
        className="heading"
        dangerouslySetInnerHTML={
          {
            "__html": "personality_heading - {"deck_name":"Big Five","personality":"<span>Cohort</span>"}",
          }
        }
      />
    </div>
    <div
      className="p"
    >
      You are up for trying novel tasks and considering new ideas. Steady and content with focusing attention on multiple projects at once, you may worry about how you are being perceived by others and want to manage your reputation.
    </div>
  </div>
  <div
    className="meaning"
  >
    <video
      controls={true}
      crossOrigin="anonymous"
      playsInline={true}
      poster="https://cdn.traitify.com/content/paradox-archetype-videos/Cohort_thumb.jpg"
    >
      <source
        src="https://cdn.traitify.com/content/paradox-archetype-videos/CohortV2.mp4"
        type="video/mp4"
      />
      <track
        kind="captions"
        src="https://cdn.traitify.com/content/paradox-archetype-videos/Cohort.vtt"
      />
    </video>
  </div>
</div>
`;

exports[`Paradox.PersonalityArchetypeHeading renders nothing if deck not ready 1`] = `null`;

exports[`Paradox.PersonalityArchetypeHeading renders nothing if disabled 1`] = `null`;

exports[`Paradox.PersonalityArchetypeHeading renders nothing if no archetype 1`] = `null`;

exports[`Paradox.PersonalityArchetypeHeading renders nothing if results not ready 1`] = `null`;
